--- a/assets/pag/Konga/style.css
+++ b/assets/pag/Konga/style.css
@@ -1,7 +1,7 @@
 body {
  background-image: url(back.png);
- background-attachment: fixed;
- background-position: inherit;
+ background-attachment: inherit;
+ background-position: center;
  background-size: 100%;
  background-repeat: no-repeat;
  background-color: black;
