--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,15 +3,15 @@
 	padding: 0;
 	box-sizing: border-box;
 	color: #fff;
-	font-family: monospace;
+	font-family: monospace, 'Courier New', Courier;
 }
 html{
 	scroll-behavior: smooth;
 }
 body{
 	background-color: #000;
-    padding: 5px;
-	margin: 5px;
+    padding: 1px;
+	margin: 1px;
     font-size: 15px;
 }
 /* header */
@@ -22,6 +22,7 @@ body{
 /* formatação de artigo */
 .secao1 {
     border: #000 1px solid;
+
 }
 .artigo1 {
     background-color: #000;
@@ -39,8 +40,11 @@ body{
 	border: #000 1px solid;
 }
 /* formatação de parágrafos */
+.texto01 {
+	color: #ffc800;
+}
 .texto02 {
-	color: #ff0;;
+	color: #ff0;
 	text-align: center;
 }
 .texto03 {
@@ -190,12 +194,13 @@ body{
   ::-webkit-scrollbar-track-piece {} 
   the draggable resizing handle that appears at the bottom corner of some elements.
   ::-webkit-resizer {} */
-  /* vídeos */
+  /* Card */
   .video00 {
 	border: #000 1px solid;
 	background-color: #000;
-	padding-top: 60px;
-	padding-bottom: 200px;
+	padding-top: 10px;
+	padding-bottom: 250px;
+	background-color: #000;
   }
 /* carrossel */
 .carousel-indicators img{
